deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odoo-prod
  labels:
    name: odoo-prod
    environment: production
    app: odoo-ce
